--- a/estilo.css
+++ b/estilo.css
@@ -717,8 +717,11 @@ header {
 .menu a:hover {
     opacity: 0.7;
 }
-main {
-    margin-top: 100px; /* igual al alto del header */
+main{
+    margin-top: 100px;
+}
+main.main-contacto {
+    margin-top: 160px; /* igual al alto del header */
   }
 /****** BANNER PRINCIPAL (SLIDER)  ******/
 .slider-computadora{ /*oculto el slider de computadora*/
@@ -830,6 +833,7 @@ main {
 h3 {
     font-size: 25px;
     text-align: center;
+    margin-top: 40px;
 }
 
 h1 {
