--- a/estilo.css
+++ b/estilo.css
@@ -723,7 +723,8 @@ nav ul a {
     flex-direction: row;
     justify-content: center;
     margin-top: 10px;
-    margin-left: 70px;
+    margin-bottom: 5px;
+    margin-left: 65px;
 }
 
 .iconos-derecha {
